--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ matrix:
       elixir: 1.3.2
     - otp_release: 19.0
       elixir: 1.3.2
+    - otp_release: 20.0
+      elixir: 1.4.5
 services:
   - mysql
 sudo: false
